--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@coral-xyz/anchor": "^0.27.0",
         "@noble/ed25519": "^2.0.0",
         "@solana/web3.js": "^1.77.3",
+        "stellar-sdk": "^10.4.1",
         "tweetnacl": "^1.0.3"
     },
     "devDependencies": {
